--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homepage",
   "version": "1.0.0",
   "description": "homepage portfolio",
-  "homepage": "https://gifuitvnluan.github.io/homepage/",
+  "homepage": "https://gifuitvnluan.github.io/homepage_react/",
   "main": "index.js",
   "scripts": {
     "build": "react-scripts build",
@@ -13,12 +13,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gifuitvnluan/homepage.git"
+    "url": "git+https://github.com/gifuitvnluan/homepage_react.git"
   },
   "author": "LuanQN",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gifuitvnluan/homepage/issues"
+    "url": "https://github.com/gifuitvnluan/homepage_react/issues"
   },
   "dependencies": {
     "body-parser": "^1.19.2",
